# mcu-fpga-public

./: .gitignore  .gitmodules
bootloader/: CMakeLists.txt  README.md
bootloader/apps/: CMakeLists.txt
bootloader/apps/simpleboot/: CMakeLists.txt
bootloader/apps/simpleboot/src/: CMakeLists.txt  bootloader.s  drivers.s
bootloader/cmake/: env.cmake  toolchain-riscv.cmake
bootloader/soc/riscv/: CMakeLists.txt
bootloader/soc/riscv/sifive_e/: linker.ld
bootloader/soc/riscv/simpleriscv/: CMakeLists.txt  startup.s
bootloader/test/: CMakeLists.txt  README.md
bootloader/test/simpleboot/: CMakeLists.txt  sifive_e_modif.ld
bootloader/test/simpleboot/include/: bootloader.h  bootloader_mocks.h  bootloader_test_stdlib.h  qemu_io.h
bootloader/test/simpleboot/src/: CMakeLists.txt  bootloader_mocks.c  bootloader_test_stdlib.c  bootloader_test_utils.c  main.c  startup.s
code/: gr.code-workspace
fpga/: README.md  TODO.md
fpga/app/: spi_master_fpga.v  spi_tb_fpga.v
fpga/app/led_blink/: Makefile  led_blink.sv  led_blink_tb.sv  led_blink_top.sv
fpga/app/riscv/: Makefile  riscv_single.sv  riscv_single_tb.sv  riscv_single_top.sv
fpga/cnstr/: Basys3_Master.xdc
fpga/include/: alu.svh  alu.vh  errno.svh  mem.svh  synth.svh
fpga/include/riscv/: controller.svh  datapath.svh  datapath.vh  hazard_ctrl.svh  mem_map.svh
fpga/scripts/: delay-calc.py
fpga/src/: alu.sv  alu.v  mcu.sv  mem.sv  seven_seg_display.sv  spi.sv  test_utils.sv  utils.sv
fpga/src/i2c/: i2c_master.v
fpga/src/riscv/: controller.sv  controller_common.sv  controller_multicycle.sv  controller_singlecycle.sv  datapath.sv  datapath_multicycle.sv  datapath_pipeline.sv  datapath_singlecycle.sv  datapath_utils.sv  hazard_ctrl.sv  io.sv  mem_pipeline.sv  riscv.sv  riscv_multicycle.sv  riscv_pipeline.sv  riscv_single_top.sv  riscv_singlecycle.sv
fpga/src/spi/: spi_master.v  spi_rx.v  spi_slave.v  spi_tx.v
fpga/src/utils/: double_clk_gen.v
fpga/systemtest/display/: Makefile  seven_seg_display_top.sv  seven_seg_display_top_tb.sv
fpga/systemtest/riscv/: Makefile  README.md  expected_results.py  find_spi_iface.sh  mem_send_ctrl_tb.sv  mem_send_ctrl_with_spi_tb.sv  riscv_all_instr_physical_fpga_test.svh  riscv_all_instr_physical_fpga_test_top.sv  riscv_all_instr_physical_fpga_test_top_tb.sv  riscv_single_all_instr_top.sv  riscv_single_all_instr_top_tb.sv  riscv_single_components_test.sv  riscv_single_components_test_tb.sv  riscv_single_components_test_top.sv  verif_results.py
fpga/systemtest/spi/: Makefile  README.md  spi_tests.sv  spi_tests_tb.sv  spi_tests_top.sv
fpga/test/: Makefile  alu_add_tb.sv  alu_add_tb.v  alu_cmp_tb.sv  alu_logic_tb.sv  alu_logic_tb.v  alu_subs_tb.sv  debounce_filter_tb.v  double_clk_gen_tb.v  i2c_master_write_tb.v  mem_ba_tb.sv  mem_byte_ops_tb.sv  mem_error_tb.sv  mem_halfw_ops_tb.sv  mem_tb.sv  mem_word_ops_tb.sv  spi_master_ctrl_tb.sv  spi_master_rx_tb.v  spi_master_tb.v  spi_master_tx_slave_rx_tb.v  spi_master_tx_tb.v  spi_master_w_tb.sv  spi_several_slaves_tb.sv  spi_slave_rx_tb.v  spi_slave_tx_tb.v  spi_tb.sv  spi_tb.v  test_utils.svh  utils_clk_div_tb.sv  utils_piso_reg_tb.sv  utils_sipo_reg_tb.sv
fpga/test/legacy/: i2c_app_tb.v  i2c_master_read_tb.v  neg_edge_det_tb.v  pos_edge_det_tb.v  spi_tb.v
fpga/test/riscv/: addi_tb.sv  all_instr_program_test_tb.sv  and_tb.sv  andi_tb.sv  auipc_tb.sv  beq_tb.sv  bge_tb.sv  bgeu_tb.sv  blt_tb.sv  bltu_tb.sv  bne_tb.sv  controller_multicycle_tb.sv  controller_singlecycle_tb.sv  controller_tb.sv  ctrl_hazards_tb.sv  datapath_tb.sv  digital_design_and_computer_arch_test_tb.sv  example_program_tb.sv  jal_tb.sv  jalr_tb.sv  lb_tb.sv  lbu_tb.sv  lh_tb.sv  lhu_tb.sv  lui_tb.sv  lw_hazards_tb.sv  lw_tb.sv  mem_map_gpio_tb.sv  mem_map_io_dec_tb.sv  mem_map_led_tb.sv  mem_map_spi_tb.sv  or_tb.sv  ori_tb.sv  pipeline_beq_tb.sv  pipeline_bge_tb.sv  pipeline_bgeu_tb.sv  pipeline_blt_tb.sv  pipeline_bltu_tb.sv  pipeline_bne_tb.sv  pipeline_jal_tb.sv  (+27 more)
fpga/test/test-utils/: 2scomp.c  (+4 more)
keil-uvision/: Lab2.uvgui.danie  Lab2.uvopt  Lab2.uvproj
mcu/: .bash_history  CMakeLists.txt  Makefile  README.md  TODO.md  packages.txt  tm4c123g.ld  tmp_test.sh
mcu/apps/: CMakeLists.txt  TODO.md
mcu/apps/fw_updater/: CMakeLists.txt  README.md
mcu/apps/fw_updater/src/: CMakeLists.txt  main.c  program.c  program.h  test.c
mcu/apps/i2c_legacy/: CMakeLists.txt
mcu/apps/i2c_legacy/src/: main.c
mcu/apps/led_blink/src/: CMakeLists.txt  main.s
mcu/apps/led_blink_c/: README.md
mcu/apps/led_blink_c/src/: CMakeLists.txt  main.c
mcu/apps/spi_reader/: README.md
mcu/apps/spi_reader/src/: main.c
mcu/apps/spi_slave_echo/src/: main.c
mcu/apps/test_app/: README.md
mcu/apps/test_app/src/: CMakeLists.txt  main.s
mcu/cmake/: env.cmake  environment.cmake  toolchain-arm.cmake  toolchain-riscv.cmake
mcu/config/: README.md  sifive_e-test_app_defconfig  simpleriscv-led_blink_c_defconfig  simpleriscv-led_blink_defconfig  simpleriscv-test_app_defconfig  tm4c123g-fw_updater_defconfig  tm4c123g-spi_reader_defconfig  tm4c123g-spi_slave_echo_defconfig
mcu/docker/: Dockerfile
mcu/soc/: CMakeLists.txt
mcu/soc/arm/: CMakeLists.txt
mcu/soc/arm/cortex-m4/: CMakeLists.txt  startup_gcc.c
mcu/soc/riscv/sifive_e/: CMakeLists.txt
mcu/soc/riscv/sifive_u/: CMakeLists.txt
mcu/soc/riscv/simpleriscv/: linker.ld  startup.s
mcu/src/: blinky-uart.c  main.c
mcu/submodules/: CMakeLists.txt
qemu/: Makefile  README.md  led_blink.s  riscv_all_instr_test.s  riscv_debug.gdb
qemu/bootloader/: CMakeLists.txt  Makefile  linker-script.md  riscv_debug.gdb
qemu/bootloader/include/: bootloader.inc  my_riscv_bootloader.ld
qemu/bootloader/include/test/: bootloader_test_utils.h  sifive_e_modif.ld
qemu/bootloader/sim/: upd_app_sim.py
qemu/bootloader/src/: bootloader.s  drivers.s  startup.s
qemu/bootloader/src/test/: bootloader_mocks.c  bootloader_test_stdlib.c  bootloader_test_utils.c  bootloader_test_utils.s  main.c  startup.s
qemu/exercises/: Makefile  exercises.s
qemu/linker-experiment/: Makefile  README.md  linker.ld
vivado/gr/: gr.xpr
(+40 files in other folders)
